[package]
name = "positive_toolbox"
version = "0.1.0"
edition = "2024"
default-run = "positive_toolbox"

[[bin]]
name = "positive_toolbox"
path = "src/main.rs"

[[bin]]
name = "code_indenter"
path = "src/tools/code_indenter.rs"

[dependencies]
iced = { version = "0.14.0", features = [
    "x11",
    "thread-pool",
    "wgpu",
    "linux-theme-detection",
] }
serde = "1.0.228"
serde_json = "1.0.149"
positive_tool_rs = { git = "https://github.com/TW0hank0/positive_tool_rs" }
image = "0.25.9"
