[package]
name = "positive_toolbox"
version = "0.1.0"
edition = "2024"
default-run = "positive_toolbox"
license = "AGPL-3.0-only"
description = "面向使用者的工具"

[[bin]]
name = "positive_toolbox"
path = "src/main.rs"

[[bin]]
name = "code_indenter"
path = "src/tools/code_indenter.rs"

[[bin]]
name = "unit_conversion"
path = "src/tools/unit_conversion.rs"

[[bin]]
name = "about"
path = "src/about/about_main.rs"

[[bin]]
name = "about_show_full_license"
path = "src/about/about_show_full_license.rs"

[dependencies]
iced = { version = "0.14.0", features = [
    "x11",
    "thread-pool",
    "wgpu",
    "linux-theme-detection",
] }
serde = "1.0.228"
serde_json = "1.0.149"
positive_tool_rs = { git = "https://github.com/TW0hank0/positive_tool_rs" }
image = "0.25.9"
log = "0.4.28"
time = { version = "0.3.47", features = ["local-offset", "formatting"] }
time-macros = { version = "0.2.27" }
open = "5.3.3"
quick-xml = { version = "0.39.0", features = ["serialize"] }

[build-dependencies]
cargo_metadata = "0.19"
serde = { version = "1.0", features = ["derive"] }
heck = "0.5"
positive_tool_rs = { git = "https://github.com/TW0hank0/positive_tool_rs" }
